util 1.3.0-M8, Contraband 0.4.4